*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@796 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-expandable-box.css
+++ b/WebContent/styles/assessment-expandable-box.css
@@ -67,7 +67,11 @@ td.box-set-upper-row-bottom-right-collapsed {
 
 
 td.box-middle-row-left {
-	background-image: url(../images/assessment-box-content-center.png); }
+	background-image: url(../images/assessment-box-set-bottom-middle-left.png); }
+	
+div.box-middle-row-left {
+	background-image: url(../images/assessment-box-content-left.png); }
+	
 	
 td.box-middle-row-middle {
 	background-image: url(../images/assessment-box-content-center.png); }
