*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@798 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/expandable-box.css
+++ b/WebContent/styles/expandable-box.css
@@ -31,6 +31,7 @@ td.box-upper-row-right-collapsed, td.box-set-upper-row-upper-right-collapsed, td
 	overflow: hidden; }
 
 td.box-middle-row-left {
+	width: 10px;
 	background-color: White;
 	background-position: left top;
 	vertical-align: top;
@@ -40,6 +41,7 @@ td.box-middle-row-left {
 	overflow: hidden; }
 	
 div.box-middle-row-left {
+	width: 10px;
 	background-color: White;
 	background-position: left top;
 	background-repeat: no-repeat;
