--- a/WebContent/styles/database-expandable-box.css
+++ b/WebContent/styles/database-expandable-box.css
@@ -81,7 +81,10 @@ td.box-middle-row-middle {
 	background-image: url(../images/database-box-content-center.png); }
 	
 td.box-middle-row-right {
-	background-image: url(../images/database-box-content-center.png); }
+	background-image: url(../images/database-box-set-bottom-right.png); }
+	
+div.box-middle-row-right {
+	background-image: url(../images/database-box-content-right.png); }
 
 td.box-lower-row-left {
 	background-image: url(../images/database-box-bottom-left.png); }
