*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@801 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-expandable-box.css
+++ b/WebContent/styles/assessment-expandable-box.css
@@ -72,12 +72,14 @@ td.box-middle-row-left {
 div.box-middle-row-left {
 	background-image: url(../images/assessment-box-content-left.png); }
 	
-	
 td.box-middle-row-middle {
 	background-image: url(../images/assessment-box-content-center.png); }
 	
 td.box-middle-row-right {
-	background-image: url(../images/assessment-box-content-center.png); }
+	background-image: url(../images/assessment-box-set-bottom-middle-right.png); }
+
+div.box-middle-row-right {
+	background-image: url(../images/assessment-box-content-right.png); }
 
 td.box-lower-row-left {
 	background-image: url(../images/assessment-box-bottom-left.png); }
