--- a/WebContent/styles/lessons-expandable-box.css
+++ b/WebContent/styles/lessons-expandable-box.css
@@ -16,16 +16,24 @@ td.box-upper-row-right {
 	
 td.box-upper-row-right-collapsed {
 	background-image: url(../images/lessons-box-collapsed-title-right.png); }
-
+	
+	
 td.box-middle-row-left {
-	background-image: url(../images/lessons-box-content-center.png); }
+	background-image: url(../images/assessment-box-set-bottom-middle-left.png); }
+	
+div.box-middle-row-left {
+	background-image: url(../images/lessons-box-content-left.png); }
+	
+td.box-middle-row-right {
+	background-image: url(../images/assessment-box-set-bottom-middle-right.png); }
+
+div.box-middle-row-right {
+	background-image: url(../images/lessons-box-content-right.png); }
+	
 	
 td.box-middle-row-middle {
 	background-image: url(../images/lessons-box-content-center.png); }
 	
-td.box-middle-row-right {
-	background-image: url(../images/lessons-box-content-center.png); }
-
 td.box-lower-row-left {
 	background-image: url(../images/lessons-box-bottom-left.png); }
 		
