*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@848 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -25,3 +25,15 @@ input.grid-editor-name,input.grid-editor-phone {
 textarea.grid-editor-desc {
 	width: 200px;
 }
+
+textarea.grid-editor-desc {
+	width: 200px;
+}
+
+input.record-gridEditor-date-day,input.record-gridEditor-date-month {
+	width: 20px;
+}
+
+input.record-gridEditor-date-year {
+	width: 40px;
+}
