*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@860 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -37,3 +37,8 @@ input.record-gridEditor-date-day,input.record-gridEditor-date-month {
 input.record-gridEditor-date-year {
 	width: 40px;
 }
+
+th.grid-editor-row-group {
+	font-size: 12pt;
+	background-color: #CCCCCC !IMPORTANT;
+}
