*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@871 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -40,5 +40,6 @@ input.record-gridEditor-date-year {
 
 th.grid-editor-row-group {
 	font-size: 12pt;
-	background-color: #CCCCCC !IMPORTANT;
+	background-color: #DDDDDD !important;
+	cursor: pointer;
 }
