*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@875 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -41,5 +41,12 @@ input.record-gridEditor-date-year {
 th.grid-editor-row-group {
 	font-size: 12pt;
 	background-color: #DDDDDD !important;
+	cursor: pointer; }
+	
+span.grid-editor-edit-node-button {
 	cursor: pointer;
-}
+	color: #2288BB; }
+
+span.grid-editor-edit-node-button:hover {
+	background-color: #2288BB;
+	color: White; }
