*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@878 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -43,10 +43,12 @@ th.grid-editor-row-group {
 	background-color: #DDDDDD !important;
 	cursor: pointer; }
 	
-span.grid-editor-edit-node-button {
+span.grid-editor-edit-note-button,
+span.grid-editor-copy-button {
 	cursor: pointer;
 	color: #2288BB; }
 
-span.grid-editor-edit-node-button:hover {
-	background-color: #2288BB;
+span.grid-editor-edit-note-button:hover,
+span.grid-editor-copy-button:hover {
+		background-color: #2288BB;
 	color: White; }
