*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@881 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -54,3 +54,9 @@ span.grid-editor-edit-note-button:hover,
 span.grid-editor-copy-button:hover {
 	background-color: #2288BB;
 	color: White; }
+	
+td.grid-editor-dist-value {
+	}	
+	
+td.grid-editor-same-value {
+	background-color: #BBDDFF; }
