*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@891 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -60,3 +60,8 @@ td.grid-editor-dist-value {
 	
 td.grid-editor-same-value {
 	background-color: #BBDDFF; }
+	
+div.grid-editor-error {
+	font-weight: bold;
+	color: red;
+}
