*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@893 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/submission-grid.css
+++ b/WebContent/styles/submission-grid.css
@@ -28,13 +28,12 @@ textarea.grid-editor-desc {
 	width: 200px;
 }
 
-input.record-gridEditor-date-day,input.record-gridEditor-date-month {
-	width: 20px;
-}
+input.grid-editor-date-day,
+input.grid-editor-date-month {
+	width: 20px; }
 
-input.record-gridEditor-date-year {
-	width: 40px;
-}
+input.grid-editor-date-year {
+	width: 40px; }
 
 th.grid-editor-row-group {
 	font-size: 12pt;
@@ -56,7 +55,7 @@ span.grid-editor-copy-button:hover {
 	color: White; }
 	
 td.grid-editor-dist-value {
-	}	
+	}
 	
 td.grid-editor-same-value {
 	background-color: #BBDDFF; }
