Added feature of saving results
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@909 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-estimates.css
+++ b/WebContent/styles/assessment-estimates.css
@@ -410,3 +410,15 @@ div.map-legend-section {
 
 input.map-legend-refresh {
 	margin-top: 0px; }	
+	
+	
+input.button-save {	
+	border:1px solid; 
+	text-decoration:none; 
+	background-color: white; 
+	border-color: #115676; 
+	background-color: white;}
+
+input.button-save:hover {	
+	background-color: #B4E6E6;}
+	
