*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@939 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/main-menu.css
+++ b/WebContent/styles/main-menu.css
@@ -25,6 +25,7 @@ div.main-menu-pages a:hover {
 	color: #93CED9; }
 
 td.main-menu-container {
+	line-height: 130%;
 	vertical-align: top;
 	padding-left: 15px;
 	padding-top: 10px; }
