*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@945 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/admin/main.css
+++ b/WebContent/admin/main.css
@@ -26,6 +26,13 @@ table.grid td {
 table.grid tr.focused td {
 	background-color: #EEEEEE; }
 
+table.grid td.grid-sorted,
+table.grid th.grid-sorted {
+	background-color: #EEEEEE; }
+	
+table.grid th.grid-clickable {
+	cursor: pointer; }
+
 /**********************************
 * pager
 ***********************************/
