*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@946 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/map.css
+++ b/WebContent/styles/map.css
@@ -192,8 +192,7 @@ td.map-zoom-slider {
 	vertical-align: top;
 	height: 24px;
 	overflow: hidden;
-	background-repeat: no-repeat;
-	background-image: url(../images/map-zoom-slider-bg.png); }	
+	background-repeat: no-repeat; }n
 	
 div.map-zoom-slider-cont {
 	height: 24px;
