--- a/WebContent/styles/database-voyage.css
+++ b/WebContent/styles/database-voyage.css
@@ -79,3 +79,87 @@ div.gallery-image-label {
 
 div.gallery-image-description {
 	text-align: center; }
+	
+	
+div.grid-tooltip {
+    visibility: hidden; 
+    position: absolute; 
+    top: 0;  
+    left: 0; 
+    z-index: 2; 
+    font: normal 8pt sans-serif; 
+    
+}
+
+
+
+table.bubble {
+	display: none;
+	position: absolute; }
+ 
+td.bubble-11 {
+	width: 12px;
+	height: 12px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-11-right.png); }	
+	
+td.bubble-11 div {
+	width: 12px;
+	height: 12px; }
+	
+td.bubble-12 {
+	height: 12px;
+	overflow: hidden;
+	background-repeat: repeat-x;
+	background-image: url(../images/bubble-12.png); }	
+	
+td.bubble-13 {
+	width: 32px;
+	height: 12px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-13-right.png); }	
+
+td.bubble-13 div {
+	width: 32px;
+	height: 12px; }
+
+td.bubble-21 {
+	width: 12px;
+	overflow: hidden;
+	background-repeat: repeat-y;
+	background-image: url(../images/bubble-21-right.png); }	
+	
+td.bubble-22 {
+	color: White;
+	padding-left: 5px;
+	padding-right: 5px;
+	background-image: url(../images/bubble-22.png); }	
+	
+td.bubble-23 {
+	width: 32px;
+	overflow: hidden;
+	background-repeat: repeat-y;
+	background-image: url(../images/bubble-23-right.png); }	
+	
+td.bubble-31 {
+	width: 12px;
+	height: 32px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-33-right.png); }	
+	
+td.bubble-32 {
+	height: 32px;
+	overflow: hidden;
+	background-repeat: repeat-x;
+	background-image: url(../images/bubble-32.png); }	
+	
+td.bubble-33 {
+	width: 32px;
+	height: 32px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-31-right.png); }
+	
