*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@983 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/map.css
+++ b/WebContent/styles/map.css
@@ -445,3 +445,13 @@ div.minimap-toggle-sw-expanded {
 	bottom: 0px;
 	background-image: url(../images/minimap-corner-arrow-sw.png);
 	position: absolute; }
+	
+	
+div.hintsClass {
+	/*font-family: tahoma, verdana, arial;
+	font-size: 8px;*/
+	background-color: #f0f0f0;
+	color: #000000;
+	border: 1px solid #808080;
+	padding: 5px;
+}
