--- a/WebContent/styles/map.css
+++ b/WebContent/styles/map.css
@@ -455,3 +455,9 @@ div.hintsClass {
 	border: 1px solid #808080;
 	padding: 5px;
 }
+
+td.map-legend-symbol {
+	text-align: center;
+	padding-right: 8px;
+	padding-left: 3px;
+}
