--- a/WebContent/styles/database-search-table.css
+++ b/WebContent/styles/database-search-table.css
@@ -177,6 +177,15 @@ td.bubble-11 {
 	background-repeat: no-repeat;
 	background-image: url(../images/bubble-11-right.png); }	
 	
+
+td.bubble-11l {
+	width: 12px;
+	height: 12px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-11.png); }	
+	
+	
 td.bubble-11 div {
 	width: 12px;
 	height: 12px; }
@@ -193,6 +202,20 @@ td.bubble-13 {
 	overflow: hidden;
 	background-repeat: no-repeat;
 	background-image: url(../images/bubble-13-right.png); }	
+	
+	
+td.bubble-12l {
+	height: 12px;
+	overflow: hidden;
+	background-repeat: repeat-x;
+	background-image: url(../images/bubble-12.png); }	
+	
+td.bubble-13l {
+	width: 32px;
+	height: 12px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-13.png); }	
 
 td.bubble-13 div {
 	width: 32px;
@@ -216,6 +239,26 @@ td.bubble-23 {
 	background-repeat: repeat-y;
 	background-image: url(../images/bubble-23-right.png); }	
 	
+	
+td.bubble-21l {
+	width: 12px;
+	overflow: hidden;
+	background-repeat: repeat-y;
+	background-image: url(../images/bubble-21.png); }	
+	
+td.bubble-22l {
+	color: White;
+	width: 350px;
+	padding-left: 5px;
+	padding-right: 5px;
+	background-image: url(../images/bubble-22.png); }	
+	
+td.bubble-23l {
+	width: 32px;
+	overflow: hidden;
+	background-repeat: repeat-y;
+	background-image: url(../images/bubble-23.png); }	
+	
 td.bubble-31 {
 	width: 12px;
 	height: 32px;
@@ -235,4 +278,24 @@ td.bubble-33 {
 	overflow: hidden;
 	background-repeat: no-repeat;
 	background-image: url(../images/bubble-31-right.png); }
+	
+td.bubble-33l {
+	width: 12px;
+	height: 32px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-33.png); }	
+	
+td.bubble-32l {
+	height: 32px;
+	overflow: hidden;
+	background-repeat: repeat-x;
+	background-image: url(../images/bubble-32.png); }	
+	
+td.bubble-31l {
+	width: 32px;
+	height: 32px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(../images/bubble-31.png); }
 	
