--- a/WebContent/styles/database-search-query.css
+++ b/WebContent/styles/database-search-query.css
@@ -156,7 +156,7 @@ div.query-builder-edit-list {
 	padding: 2px;
 	background-color: #F1E7C8;
 	overflow: scroll;
-	overflow: -moz-scrollbars-vertical;
+	/*overflow: -moz-scrollbars-vertical;*/
 	height: 200px; }
 	
 table.query-builder-quicksearch {
