*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1042 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/newMaps.css
+++ b/WebContent/styles/newMaps.css
@@ -1,7 +1,7 @@
 body {
 	background-position: 0px 105px;
-	background-image: url(../images/resources-bg.png);
-	background-repeat: repeat-x; }
+	background-image: url(../images/newMaps-bg.png);
+	background-repeat: repeat;}
 
 table.images-category {
 	border-collapse: collapse;
