--- a/WebContent/styles/index.css
+++ b/WebContent/styles/index.css
@@ -6,15 +6,29 @@ body {
 	background-image: url(../new-images/background.png); 
 	background-repeat: repeat-x;
  }
- 
-div.index-middle-left{
+
+
+td.index-middle-left{
+	vertical-align: top; 
 	width: 500 px;
+	padding-right: 20px;
 }
 
-div.index-middle-right{
-	margin-left:520px;
-	background-image: url(../images/index-middle-bg.png); 
-	background-repeat: repeat-x;
+
+
+td.index-middle-right{
+	vertical-align: top; 
+	padding-left:20px;
+}
+
+td.index-middle-right div.index-title{
+	background-image: url(../new-images/index-title.png);
+	margin-left:10px;
+	margin-top:5px;
+}
+
+td.index-middle-right div.index-intro{
+	background-image: url(../new-images/index-intro.png);
 }
 
 div.index-middle {
@@ -58,26 +72,25 @@ div.index-highlight-text {
 
 /* welcome map */
 
-table.welcome-map {
-	margin-top: 20px;
-	margin-left: 116px; }
+td.index-middle-left table.welcome-map {
+/*
+	padding-top: 20px;
+	padding-left: 116px; 
+	*/
+}
 	
-td.welcome-map {
-	background-image: url(../new-images/index-maptext-bg.png);
-	padding-left: 116px;	
-	padding-top: 0px;
+td.index-middle-left div.welcome-map {
 /*	vertical-align: top; */
-	width: 378px;
+
  }
 
-td.welcome-map-text {
+td.index-middle-left div.welcome-map-text {	
 	background-image: url(../new-images/index-maptext-bg.png);
-	padding-left: 116px;	
-	padding-top: 0px;
-/*	vertical-align: top; */
+	background-repeat: repeat-x;
+	margin-left: 116px;	
+	margin-top: -15px;
 	width: 378px;
-		
-/*	vertical-align: top;*/
+	height:291px;
 }
 	
 td.welcome-map-top-left {
@@ -110,8 +123,11 @@ td.welcome-map-middle-left {
 	width: 10px; */
 }
 	
-td.welcome-map-image {
-	vertical-align: top; }
+td.index-middle-left td.welcome-map-image {
+	padding-left:115px;
+	padding-top: 20px;
+/*	vertical-align: top; */
+}
 	
 td.welcome-map-middle-right {
 /*	background-image: url(../images/welcome-map-middle-right.png);
@@ -147,25 +163,26 @@ img.welcome-map-place {
 	cursor: pointer; }
 	
 div.welcome-main-text {
-/*
-	border-top: 1px solid #48605F;
+
+
 	font-size: 8pt;
 	line-height: 130%;
-	padding-top: 5px;
-	margin-top: 5px; */
+	padding-top: 15px;
+	margin-top: 5px; 
 }
 	
 div.welcome-place-title {
-/*
-	border-top: 1px solid #48605F;
+
+
 	font-size: 8pt;
 	font-weight: bold;
-	padding-top: 5px;
+	padding-top: 15px;
 	margin-top: 5px;
-	line-height: 130%; */
+	line-height: 130%; 
 }
 
 div.welcome-place-text {
-/*	font-size: 8pt;
-	line-height: 130%; */
+	font-size: 8pt;
+	line-height: 130%; 
 }
+
