--- a/WebContent/styles/resources-images.css
+++ b/WebContent/styles/resources-images.css
@@ -3,22 +3,26 @@ body {
 	background-image: url(../images/resources-bg.png);
 	background-repeat: repeat-x; }
 
-table.images-category {
+div.images-nav-path {
+	margin-bottom: 2px; }
+
+/* images homepage */
+
+div.images-category {
+	width: 660px;
 	border-collapse: collapse;
-	width: 800px;
-	border-bottom: 1px solid #165B31;
+	border-bottom: 1px dotted #165B31;
 	margin-bottom: 10px; }
 
-td.images-category-name {
+div.images-category-name {
 	font-size: 14pt; }
 
-td.images-category-link {
-	text-align: right;
-	vertical-align: bottom; }
+div.images-category-link {
+	margin-top: -3px; }
 
-td.images-category-link a {
-	text-decoration: none; }
-	
+div.images-category-link a {
+	text-decoration: none; } 
+
 div.images-category-sample {
 	margin-bottom: 20px; }
 
@@ -63,6 +67,29 @@ div.images-gallery-query div.gallery-image-label {
 div.images-category-sample div.gallery-image-description,
 div.images-gallery-query div.gallery-image-description {
 	text-align: center; }
+
+/* left column */
+
+div.images-query-box {
+	border-bottom: 1px solid #B4D6CD;
+	margin-bottom: 10px;
+	padding-bottom: 10px; }
+
+div.images-query-search-button {
+	}
+	
+span.images-count {
+	color: #BBBBBB; }
+	
+/* query */
+
+div.images-query-title {
+	border-bottom: 1px dotted #165B31; 
+	font-size: 14pt;
+	padding-bottom: 0px;
+	margin-bottom: 10px; }
+	
+/* detail */	
 	
 div.images-gallery-detail {
 	margin-bottom: 5px; }
@@ -91,7 +118,8 @@ img.image-detail {
 	border: 1px solid #165B31; }
 	
 div.image-title {
-	font-size: 14pt; }
+	font-size: 14pt;
+	margin-bottom: 10px; }
 	
 div.image-description {
 	margin-top: 0px; }
@@ -101,6 +129,7 @@ table.image-detail-info {
 	border-collapse: collapse; }
 	
 table.image-detail-info td {
+	vertical-align: top;
 	border-top: 1px solid #165B31;
 	border-bottom: 1px solid #165B31;
 	padding: 5px 0px 5px 0px; }
